Bug 159739 - resizing panel from large to tiny breaks tray layout
Summary: resizing panel from large to tiny breaks tray layout
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-23 15:52 UTC by Bruno Virlet
Modified: 2008-05-25 17:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Virlet 2008-03-23 15:52:56 UTC
Version:            (using Devel)
Installed from:    Compiled sources

steps to follow : 
- Have some icon in the systray (in my case 3 icons)
- Make the panel "Large", Apply (the systray goes on two lines)
- Make it "Tiny". PROBLEM: The panel resizes but the systray wants to stay on two lines

workaround : 
resize it from large to small, then small to tiny solves the problem
Comment 1 Marcin Juszkiewicz 2008-04-09 15:00:52 UTC
Happens for me with 4.0.68 and with 794641 svn revision.

OS: Debian
Comment 2 Jason Stubbs 2008-05-25 15:24:42 UTC
Patch on review board (http://reviewboard.vidsolbach.de/dashboard/)
Comment 3 Jason Stubbs 2008-05-25 17:43:57 UTC
SVN commit 812495 by jstubbs:

QGridLayout never decreases row/column counts, so maintain it manually.
Also ensure that icons are layed out after a change to the confining
direction, fex. height in a horizontal panel.

BUG: 159739


 M  +25 -7     systemtraywidget.cpp  
 M  +2 -0      systemtraywidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=812495