QGridLayout never decreases row/column counts, so maintain it manually. Also ensure that icons are layed out after a change to the confining direction, fex. height in a horizontal panel.

BUG: 159739

svn path=/trunk/KDE/kdebase/workspace/; revision=812495